Improvements to sbt.bat suggested by @retronym